Fix typo in the documentation

--- a/doc/fr/manuel.tex
+++ b/doc/fr/manuel.tex
@@ -418,7 +418,7 @@ Code & Équation & Explication & Signé? \\ \hline
 \textbf{EQ}	& $A == B$ & Teste l'égalité & N/A \\
 \textbf{NE}	& $A \neq B$ & Teste l'inégalité & N/A \\ \hline
 \textbf{CS}	& $A \geq B$ & Teste si un premier nombre est plus grand ou égal à un second & NON \\
-\textbf{CS}	& $A < B$ & Teste si un premier nombre est strictement plus petit qu'un second & NON \\
+\textbf{CC}	& $A < B$ & Teste si un premier nombre est strictement plus petit qu'un second & NON \\
 \textbf{HI}	& $A > B$ & Teste si un premier nombre est strictement plus grand qu'un second & NON \\
 \textbf{LS}	& $A \leq B$ & Teste si un premier nombre est plus petit ou égal à un second & NON \\ \hline
 \textbf{GE}	& $A \geq B$ & Teste si un premier nombre est plus grand ou égal à un second & OUI \\
